# nemo-anywhere

./: .gitignore  README.md  contributing.md  fork.md  install.bash  install.ps1
.github/: FUNDING.yml
cicd/: cicd.bash  config.bash
cicd/hooks/: install.bash  pre-push
cicd/utility/: docker-run.bash  git-auto-msg.bash  n8git_backup-and-publish  release.bash
cicd/utility/include/: gfs-rotate.bash
cicd/win/: Dockerfile  fetch-sysroot.bash  gui-smoke.bash  win64.cross.txt
original/docs/: nemo.1
project/: backlog.md  design.md
source/: meson.build
source/action-layout-editor/: meson.build  nemo_action_layout_editor.py
source/data/: meson.build  nemo-anywhere_action.lang  nemo-anywhere_search_helper.lang  nemo-autorun-software.desktop.in  nemo-autostart.desktop.in  nemo.desktop.in  nemo.service.in  org.nemo.root.policy.in
source/data/icons/: meson.build
source/data/nemo-actions/: mount-archive.nemo_action.in
source/docs/: meson.build  nemo-anywhere-connect-server.1  nemo-anywhere-desktop.1  nemo-anywhere.1
source/eel/: eel-gdk-extensions.c  eel-gnome-extensions.c  eel-gtk-extensions.c  eel-gtk-extensions.h  eel-vfs-extensions.c  eel-vfs-extensions.h
source/files/: meson.build
source/files/usr/share/nemo-anywhere/actions/: 90_new-launcher.nemo_action  mount-archive.nemo_action  set-resolution.nemo_action
source/gresources/: nemo-desktop-overlay.glade  nemo-file-management-properties.glade  nemo-search-bar.glade
source/libnemo-extension/: meson.build  nemo-desktop-preferences.c
source/libnemo-private/: meson.build  nemo-action-manager.c  nemo-column-utilities.c  nemo-desktop-thumbnail.c  nemo-desktop-thumbnail.h  nemo-directory-async.c  nemo-directory.c  nemo-dnd.c  nemo-favorite-vfs-file-enumerator.c  nemo-favorite-vfs-file-enumerator.h  nemo-favorite-vfs-file-monitor.c  nemo-favorite-vfs-file-monitor.h  nemo-favorite-vfs-file.c  nemo-favorite-vfs-file.h  nemo-favorites.c  nemo-favorites.h  nemo-file-changes-queue.c  nemo-file-dnd.c  nemo-file-operations.c  nemo-file-private.h  nemo-file-utilities.c  nemo-file.c  nemo-file.h  nemo-global-preferences.c  nemo-icon-container.c  nemo-icon-dnd.c  nemo-icon-names.h  nemo-metadata-store.c  nemo-metadata-store.h  nemo-metadata.h  nemo-network-win32.c  nemo-network-win32.h  nemo-posix-compat.h  nemo-program-choosing.c  nemo-search-engine-advanced.c  nemo-thumbnail-pixbuf-utils.c  nemo-thumbnails.c  nemo-trash-win32.c  nemo-trash-win32.h  nemo-vfs-file.c  (+1 more)
source/po/: POTFILES.in
source/search-helpers/: epub2text.nemo_search_helper  meson.build  mso-ppt.nemo_search_helper  mso-xls.nemo_search_helper  mso.nemo_search_helper  odf.nemo_search_helper
source/src/: meson.build  nemo-action-config-widget.c  nemo-application.c  nemo-bookmark-list.c  nemo-bookmarks-window.c  nemo-desktop-application.c  nemo-desktop-main.c  nemo-extension-config-widget.c  nemo-icon-view-container.c  nemo-icon-view-grid-container.c  nemo-icon-view.c  nemo-location-bar.c  nemo-main-application.c  nemo-main.c  nemo-mime-actions.c  nemo-pathbar.c  nemo-places-sidebar.c  nemo-progress-ui-handler.c  nemo-properties-window.c  nemo-template-config-widget.c  nemo-tree-sidebar.c  nemo-view-dnd.c  nemo-view.c  nemo-window-manage-views.c  nemo-window-menus.c  nemo-window-pane.c  nemo-window-slot.c  nemo-window.c
source/test/: meson.build  test-eel-user-input.c  test-gio-fileops.c  test-nemo-metadata-store.c  test-nemo-trash-win32.c
utility/: n8runfm.ps1  run-windows-build-via-wine.bash
